--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    font-family: sans-serif;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background: fixed;
+}
+
+.d{
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+}
+
+.leaflet-container{
+    height: 100vh;
+}
